--- a/src/css/style.less
+++ b/src/css/style.less
@@ -4,5 +4,4 @@
 
 @import "sections/header";
 @import "sections/footer";
-
-@import "components/employeeSearch";
+@import "sections/employeeSearch";
