fix manager floating left, naming conventions

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -4,4 +4,5 @@
 
 @import "sections/header";
 @import "sections/footer";
-@import "sections/employeeSearch";
+@import "sections/left-column";
+@import "sections/employee-search";
