highlight click on list, styling changes

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -2,6 +2,8 @@
 
 @import "library/variables";
 
+@import "components/tables";
+
 @import "sections/header";
 @import "sections/footer";
 @import "sections/left-column";
