styling/ search delay

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -3,8 +3,9 @@
 @import "library/variables";
 
 @import "components/tables";
+@import "components/pagination";
 
 @import "sections/header";
 @import "sections/footer";
 @import "sections/left-column";
-@import "sections/employee-search";
+@import "sections/employee-list";
