--- a/src/css/style.less
+++ b/src/css/style.less
@@ -3,6 +3,7 @@
 @import "library/variables";
 
 @import "components/tables";
+@import "components/pagination";
 
 @import "sections/header";
 @import "sections/footer";
