Manager link done

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -9,3 +9,4 @@
 @import "sections/footer";
 @import "sections/left-column";
 @import "sections/employee-list";
+@import "sections/employee-manager";
