--- a/src/css/sections/employee-manager.less
+++ b/src/css/sections/employee-manager.less
@@ -4,7 +4,7 @@
    padding:0!important;
    font: inherit;
    /*border is optional*/
-   border-bottom:1px solid #444 blue;
+   border-bottom: 1px solid blue;
    cursor: pointer;
    color: blue;
    outline: none;
