--- a/src/css/style.less
+++ b/src/css/style.less
@@ -4,6 +4,7 @@
 
 @import "components/tables";
 @import "components/pagination";
+@import "components/print";
 
 @import "sections/header";
 @import "sections/footer";
