--- a/src/css/style.less
+++ b/src/css/style.less
@@ -8,6 +8,7 @@
 
 @import "sections/header";
 @import "sections/footer";
-@import "sections/left-column";
+@import "sections/columns";
 @import "sections/employee-list";
 @import "sections/employee-manager";
+@import "sections/employee-detail";
