--- a/src/css/components/tables.less
+++ b/src/css/components/tables.less
@@ -1,3 +1,12 @@
-.table-header {
-  background-color: @gray-lighter;
+.table-condensed {
+  margin-bottom: @grid-gutter-width / 2;
+
+  > thead > tr {
+    background-color: @gray-lighter;
+
+    > th {
+      font-size: @font-size-h4;
+      padding: 5px;
+    }
+  }
 }
