--- a/src/css/sections/columns.less
+++ b/src/css/sections/columns.less
@@ -6,3 +6,6 @@
     padding-left: @grid-gutter-width / 4;
   }
 }
+.left-column, .right-column {
+  margin-bottom: floor(@grid-gutter-width / 2);
+}
