better responsive header styling, min-width

--- a/src/css/sections/footer.less
+++ b/src/css/sections/footer.less
@@ -5,9 +5,11 @@ body {
 html {
   position: relative;
   min-height: 100%;
+  min-width: 360px;
 }
 
 .navbar.navbar-static-bottom {
+  min-width: 360px;
   position: absolute;
   bottom: 0;
   margin-bottom: 0;
