header mobile view issues
-click outside mobile nav closes it
-full width mobile nav buttons
-toggle menu now on li instead of button

-added version number to footer

--- a/src/css/sections/footer.less
+++ b/src/css/sections/footer.less
@@ -19,3 +19,13 @@ html {
   border-top: 1px solid darken(@gray-lighter, 20%);
   .text-center;
 }
+
+.version {
+  position:absolute;
+  bottom: 5px;
+  right: 15px;
+  display:none;
+  @media (min-width: @screen-sm-min) {
+    display:block;
+  }
+}
