changed two to one column layout breakpoint
Now <970px changes to single column layout.
Changed EmployeeSearchIgnoreEnterOnSubmit to EmployeeSearchOnSubmit for
naming consistency.

--- a/src/css/sections/columns.less
+++ b/src/css/sections/columns.less
@@ -1,4 +1,4 @@
-@media (min-width: @screen-lg-min) {
+@media (min-width: @screen-md-min) {
   .left-column {
     padding-right: @grid-gutter-width / 4;
   }
