--- a/src/css/style.less
+++ b/src/css/style.less
@@ -12,3 +12,4 @@
 @import "sections/employee-list";
 @import "sections/employee-manager";
 @import "sections/employee-detail";
+@import "sections/employee-search";
