updated help page layout/images

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -5,6 +5,7 @@
 @import "components/tables";
 @import "components/pagination";
 @import "components/print";
+@import "components/utilities";
 
 @import "sections/header";
 @import "sections/footer";
