inital commit/changes
- removed footer
- fixed header css (color, buttons, fixed)
- removed header images
- fixed fonts CORS issue? (absolute url to fonts)
- fixed print issues?
- changed about page to container fluid (display issues)
- removed about page images (not rendering -> hard code employee dir
url's in?)

--- a/src/css/components/print.less
+++ b/src/css/components/print.less
@@ -1,4 +1,10 @@
 @media print {
+  #header, #footer {
+    display: none;
+  }
+  #wrapper {
+    display: block;
+  }
   .no-print {
     display: none;
   }
