--- a/src/css/bootstrap.less
+++ b/src/css/bootstrap.less
@@ -28,7 +28,7 @@
 // @import "bootstrap/button-groups.less";
 @import "bootstrap/input-groups.less";
 // @import "bootstrap/navs.less";
-@import "bootstrap/navbar.less";
+// @import "bootstrap/navbar.less";
 // @import "bootstrap/breadcrumbs.less";
 @import "bootstrap/pagination.less";
 // @import "bootstrap/pager.less";
