--- a/src/css/style.less
+++ b/src/css/style.less
@@ -2,6 +2,7 @@
 
 @import "library/variables";
 
+@import "components/buttons";
 @import "components/tables";
 @import "components/pagination";
 @import "components/print";
