--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,17 +1,18 @@
 @import "bootstrap";
-
+// Library
 @import "library/variables";
-
+// Components
 @import "components/buttons";
 @import "components/tables";
 @import "components/pagination";
 @import "components/print";
 @import "components/utilities";
-
+// Sections
 @import "sections/header";
 @import "sections/footer";
 @import "sections/columns";
 @import "sections/employee-list";
 @import "sections/employee-manager";
 @import "sections/employee-detail";
+@import "sections/employee-search";
 @import "sections/ie";
